<resources>
    <string name="app_name">GestionStock</string>
    <string name="title_activity_reglage">ReglageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test_fragment">TestFragment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="confirmation">Confirmation</string>

    <string name="menu_securiser_title">Sécuriser le menu</string>

    <!-- Dialog Categorie -->
    <string name="dialog_categorie_title_new">Nouvelle catégorie</string>
    <string name="dialog_categorie_title_edit">Modifier la catégorie</string>
    <string name="dialog_categorie_name_libelle">Nom </string>
    <string name="dialog_categorie_name_hint">Nom de la catégorie</string>
    <string name="dialog_categorie_color_libelle">Couleur</string>
    <string name="dialog_categorie_toast_erreur_nom">Il faut mettre un nom à la catégorie</string>
    <string name="dialog_categorie_toast_erreur_couleur">La couleur choisie est déjà utilisée</string>
    <string name="dialog_categorie_toast_erreur_nb_max">Nombre de catégorie maximale atteinte</string>
    <string name="dialog_categorie_toast_erreur_nom_double">Le nom choisie est déjà utilisé</string>


    <!-- Dialog Produit -->
    <string name="dialog_produit_title_new">Nouveau produit</string>
    <string name="dialog_produit_title_edit">Modifier le produit</string>
    <string name="dialog_produit_toast_erreur_nom">Il faut mettre un nom au produit</string>
    <string name="dialog_produit_toast_erreur_prix">Il faut mettre un prix au produit</string>
    <string name="dialog_produit_toast_erreur_lot">Il faut mettre un lot au produit</string>

    <!-- Dialog ColorPicker -->
    <string name="dialog_colorpicker_title">Séléctionnez une couleur</string>

    <!-- Dialog Erreur -->
    <string name="dialog_error_title">Attention</string>

    <!-- Dialog connexion -->
    <string name="dialog_connexion_titre">Entrez le mot de passe </string>
    <string name="dialog_connexion_ask_titre">Saisissez votre mot de passe,\n pour sécuriser l\'acces à l\'écran de réglage</string>
    <string name="dialog_connexion_ask_confirm">Confirmez votre mot de passe</string>
    <string name="dialog_connexion_ask_ok">Mot de passe enregistré</string>
    <string name="dialog_connexion_ask_cancel">Les mots de passes ne sont pas identiques</string>
    <string name="dialog_save_password">7412</string>

    <!-- Dialog confirmation charger donnees -->
    <string name="dialog_reglage_ask_confirm_load">Voulez-vous charger les données</string>

    <!-- Accueil -->
    <string name="accueil_title">Accueil</string>
    <string name="accueil_bt_effacer">Annuler saisie</string>
    <string name="accueil_tost_cmd_save">Note enregistrée</string>
    <string name="accueil_tost_cmd_del">Note supprimée</string>
    <string name="accueil_confirm_message">Valider la commande ?</string>
    <string name="accueil_solde">Solde : </string>
    <string name="accueil_bt_total">Total Esp</string>

    <!-- Stock -->
    <string name="stock_title">Consommation</string>
    <string name="stock_explication">Consomations des produits</string>
    <string name="stock_no_lot">Aucun lot à commander</string>
    <string name="stock_1lot">(1 lot = %1$s unités)</string>
    <string name="stock_valider_ok">La commande a été retirée du stock</string>
    <string name="stock_valider_nok">Rien à commander</string>

    <!-- Planning -->
    <string name="planning_title">Planning</string>
    <string name="planning_menu_param">Paramètres</string>
    <string name="planning_param_start_day">Début journée : </string>
    <string name="planning_param_end_day">Fin journée : </string>
    <string name="planning_param_plage">Plage %1$s</string>


    <!-- Bilan -->
    <string name="bilan_title">Bilan</string>

    <!-- Reglages -->
    <string name="reglage_title">Réglages</string>
    <string name="reglage_menu_save">Sauvegarder</string>
    <string name="reglage_menu_load">Charger</string>
    <string name="reglage_menu_load_date">Historique</string>
    <string name="reglage_save_message">Sauvgegarde des données en cours...</string>
    <string name="reglage_load_message">Chargement des données en cours...</string>
    <string name="reglage_toast_save">Données sauvegardées</string>
    <string name="reglage_toast_load">Données chargées</string>
    <string name="reglage_produit_cellule_lot"> %1$s unité(s)</string>


</resources>
