<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/Accueil"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/accueil_title"/>
        <item
            android:id="@+id/Stock"
            android:icon="@drawable/ic_local_grocery_store_black_48dp"
            android:title="@string/stock_title"/>
        <item
            android:id="@+id/Bilan"
            android:icon="@drawable/ic_trending_up_black_48dp"
            android:title="@string/bilan_title"/>
        <item
            android:id="@+id/Reglage"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/reglage_title"/>

    </group>
</menu>
