<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="@dimen/margin_20">

    <TextView
        style="@style/dialog_text_libelle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_categorie_name_libelle"
        />

    <EditText
        android:id="@+id/nomCategorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_categorie_name_hint"
        android:inputType="text"
        android:textSize="@dimen/font_14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/dialog_categorie_color_libelle"
        style="@style/dialog_text_libelle"/>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btnChoisirCouleur"
        style="@style/color_picker_bt"
        />

</LinearLayout>